# StickCompiler

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  rustfmt.toml  smoketest.txt
src/: main.rs
src/error/: diagnostic.rs  errors.rs  mod.rs
src/lexer/: diagnostic.rs  error.rs  lex.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parse.rs
tests/: decltest.txt
