[package]
name = "StickCompiler"
version = "0.0.1"
edition = "2024"

# 25 deps total
[dependencies]
# logos is really the fattest at 19 deps and it pulls in chumsky
logos = "0.16.0"

# ariadne is 4 deps, 
ariadne = "0.4"

# ansi escapes & button continue r 1 (6 total, light shit)
strip-ansi-escapes = "0.2"
press-btn-continue = "0.2" # i'm fucking lazy ok

# 3 deps, simple helper for converting enum value to str
strum_macros = "0.27.2"
